--- a/client/bakeshop-app/src/app/products/product-modal/product-modal.component.css
+++ b/client/bakeshop-app/src/app/products/product-modal/product-modal.component.css
@@ -69,7 +69,7 @@
   .modal-body{
     width: 50%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr, 1fr, 0.5fr, 0.25fr, 0.25fr;
     height: 100%;
     margin-left: 20px;
@@ -95,18 +95,52 @@
     
   }
 
-  .fa-plus{
-    grid-column: 1/2;
+  .qty-portion{
     grid-row: 3/4;
+    justify-content: center;
+  }
+
+  .qty-label{
+    grid-column: 1/2;
+    align-self: center;
+  }
+  
+  .fa-plus{
+    grid-column: 2/3;
     justify-self: end;
     align-self: center;
   }
 
-  .fa-minus{
+  .fa-plus:hover, .fa-minus:hover{
+    cursor: pointer;
+    transform: scale(1.2);
+  }
+
+  .cake-quantity{
     grid-column: 3/4;
-    grid-row: 3/4;
+    width: 60%;
+    height: 2rem;
+    background-color: whitesmoke;
+    justify-self: center;
+    border-radius: 12px;
+    align-self: center;
+    text-align: center;
+    color: black;
+  }
+
+  .fa-minus{
+    grid-column: 4/5;
     justify-self: start;
     align-self: center;
+  }
+
+  .price{
+    grid-column: 1/3;
+    grid-row: 4/5;
+    align-self: center;
+    font-size: 1.3rem;
+    font-weight: bold;
+    color: var(--dark-brown);
   }
 
   .btn-add-cart{
@@ -139,11 +173,13 @@
     }
     .modal-header{
       width: 100%;
+      height: 50%;
       border-radius: 15px 15px 0 0;
     }
 
     .modal-body{
       justify-content: center;
+      width: 100%;
     }
     
   }
